--- a/components/stepper/themes/express.css
+++ b/components/stepper/themes/express.css
@@ -16,7 +16,11 @@ governing permissions and limitations under the License.
 
     --spectrum-stepper-buttons-border-style: solid;
     --spectrum-stepper-buttons-border-width: var(--spectrum-border-width-200);
+    --spectrum-stepper-buttons-border-color: transparent;
     --spectrum-stepper-buttons-background-color: var(--spectrum-gray-50);
+    --spectrum-stepper-buttons-border-color-hover: transparent;
+    --spectrum-stepper-buttons-border-color-focus: transparent;
+    --spectrum-stepper-buttons-border-color-keyboard-focus: transparent;
 
     --spectrum-stepper-button-border-radius-reset: var(--spectrum-in-field-button-fill-stacked-inner-border-rounding);
 
@@ -25,6 +29,11 @@ governing permissions and limitations under the License.
     --spectrum-stepper-border-color-focus: var(--spectrum-gray-800);
     --spectrum-stepper-border-color-focus-hover: var(--spectrum-gray-900);
     --spectrum-stepper-border-color-keyboard-focus: var(--spectrum-gray-900);
+
+    --spectrum-stepper-border-color-invalid: transparent;
+    --spectrum-stepper-border-color-focus-invalid: transparent;
+    --spectrum-stepper-border-color-focus-hover-invalid: transparent;
+    --spectrum-stepper-border-color-keyboard-focus-invalid: transparent;
 
     --spectrum-stepper-button-background-color-focus: var(--spectrum-gray-400);
     --spectrum-stepper-button-background-color-keyboard-focus: var(--spectrum-gray-300);
