--- a/components/stepper/themes/spectrum.css
+++ b/components/stepper/themes/spectrum.css
@@ -16,13 +16,22 @@ governing permissions and limitations under the License.
 
     --spectrum-stepper-buttons-border-style: none;
     --spectrum-stepper-buttons-border-width: 0;
+    --spectrum-stepper-buttons-border-color: var(--spectrum-gray-500);
     --spectrum-stepper-buttons-background-color: var(--spectrum-gray-50);
+    --spectrum-stepper-buttons-border-color-hover: var(--spectrum-gray-600);
+    --spectrum-stepper-buttons-border-color-focus: var(--spectrum-gray-800);
+    --spectrum-stepper-buttons-border-color-keyboard-focus: var(--spectrum-gray-900);
 
     --spectrum-stepper-border-color: var(--spectrum-gray-500);
     --spectrum-stepper-border-color-hover: var(--spectrum-gray-600);
     --spectrum-stepper-border-color-focus: var(--spectrum-gray-800);
     --spectrum-stepper-border-color-focus-hover: var(--spectrum-gray-800);
-    --spectrum-stepper-border-color-keyboard-focus: var(--spectrum-gray-900); 
+    --spectrum-stepper-border-color-keyboard-focus: var(--spectrum-gray-900);
+
+    --spectrum-stepper-border-color-invalid: var(--spectrum-negative-border-color-default);
+    --spectrum-stepper-border-color-focus-invalid: var(--spectrum-negative-border-color-focus);
+    --spectrum-stepper-border-color-focus-hover-invalid: var(--spectrum-negative-border-color-focus-hover);
+    --spectrum-stepper-border-color-keyboard-focus-invalid: var(--spectrum-negative-border-color-key-focus);
 
     --spectrum-stepper-button-border-radius-reset: 0px;
 
