feat(backroundlayers): display each layer

--- a/components/backgroundlayers/index.css
+++ b/components/backgroundlayers/index.css
@@ -12,10 +12,16 @@ governing permissions and limitations under the License.
 
 .spectrum-BackgroundLayers {
   --spectum-backgroundlayers-background-color: var(--spectrum-gray-25);
+  --spectrum-backgroundlayers-drop-shadow:
 }
 
 .spectrum-BackgroundLayers--elevated {
   --spectum-backgroundlayers-background-color: var(--spectrum-gray-25);
+  --spectrum-backgroundlayers-shadow-horizontal: 0;
+  --spectrum-backgroundlayers-shadow-vertical: 0;
+  --spectrum-backgroundlayers-shadow-blur: 5px;
+  --spectrum-backgroundlayers-shadow-color: var(--spectrum-gray-200);
+
 }
 .spectrum-BackgroundLayers--layer2 {
   --spectum-backgroundlayers-background-color: var(--spectrum-gray-25);
@@ -28,9 +34,10 @@ governing permissions and limitations under the License.
 }
 .spectrum-BackgroundLayers--base {
   --spectum-backgroundlayers-background-color: var(--spectrum-gray-25);
-  border: 2px solid gray;
+  border: 2px solid rgba(180, 180, 180, 0.25);
 }
 
 .spectrum-BackgroundLayers {
   background-color: var(--spectum-backgroundlayers-background-color);
+  filter: drop-shadow(var(--spectrum-backgroundlayers-shadow-horizontal) var(--spectrum-backgroundlayers-shadow-vertical) var(--spectrum-backgroundlayers-shadow-blur) var(--spectrum-backgroundlayers-shadow-color));
 }
