--- a/components/menu/index.css
+++ b/components/menu/index.css
@@ -798,8 +798,8 @@ governing permissions and limitations under the License.
   display: flex;
   flex-flow: row wrap;
   align-items: center;
-  padding-inline-start: var(--mod-menu-back-padding-inline-start, 0);
-  padding-block: var(--mod-menu-back-padding-block, 0);
+  padding-inline: var(--mod-menu-back-padding-inline-start, 0) var(--mod-menu-back-padding-inline-end, var(--spectrum-menu-item-label-inline-edge-to-content));
+  padding-block: var(--mod-menu-back-padding-block-start, 0) var(--mod-menu-back-padding-block-end, 0);
 
   .spectrum-Menu-sectionHeading {
     padding: 0;
