Revert "feat(picker): adds class"
This reverts commit 342a65269670e6fceadd8df019c0d63ce41854d4.

--- a/components/fieldlabel/index.css
+++ b/components/fieldlabel/index.css
@@ -109,14 +109,15 @@ governing permissions and limitations under the License.
 .spectrum-FieldLabel--right {
   display: inline-block;
   padding-inline: 0 var(--mod-fieldlabel-side-padding-right, var(--spectrum-fieldlabel-side-padding-right));
-  padding-block: var(--mod-fieldlabel-side-padding-top, var(--spectrum-fieldlabel-side-padding-top)) 0;
 }
 
 .spectrum-FieldLabel--right {
   text-align: end;
+  padding-block: var(--mod-fieldlabel-side-padding-top, var(--spectrum-fieldlabel-side-padding-top)) 0;
 }
 
-.spectrum-FieldLabel-picker--quiet {
+.spectrum-FieldLabel--left {
+  text-align: end;
   padding-block: 8px 0;
 }
 
